thirdParty/libxbee/xbee.h

typedef pthread_mutex_t    xbee_mutex_t;
typedef sem_t              xbee_sem_t;
typedef HANDLE             xbee_mutex_t;
typedef HANDLE             xbee_sem_t;
enum xbee_types {
  xbee_unknown,

  xbee_localAT,       /* frame ID */
  xbee_remoteAT,
  xbee_modemStatus,
  xbee_txStatus,
  
  /* XBee Series 1 stuff */
  xbee_16bitRemoteAT, /* frame ID */
  xbee_64bitRemoteAT, /* frame ID */

  xbee_16bitData,     /* frame ID for ACKs */
  xbee_64bitData,     /* frame ID for ACKs */

  xbee_16bitIO,
  xbee_64bitIO,
  
  /* XBee Series 2 stuff */
  xbee2_data,
  xbee2_txStatus
};
typedef enum xbee_types xbee_types;
typedef struct xbee_sample xbee_sample;
struct xbee_sample {
  /* X  A5 A4 A3 A2 A1 A0 D8    D7 D6 D5 D4 D3 D2 D1 D0  */
  unsigned short IOmask;          /*                  IO */
  /* X  X  X  X  X  X  X  D8    D7 D6 D5 D4 D3 D2 D1 D0  */
  unsigned short IOdigital;       /*                  IO */
  /* X  X  X  X  X  D  D  D     D  D  D  D  D  D  D  D   */
  unsigned short IOanalog[6];     /*                  IO */
};
typedef struct xbee_pkt xbee_pkt;
struct xbee_pkt {
  unsigned int sAddr64        : 1; /* yes / no */
  unsigned int dataPkt        : 1; /* if no - AT packet */
  unsigned int txStatusPkt    : 1;
  unsigned int modemStatusPkt : 1;
  unsigned int remoteATPkt    : 1;
  unsigned int IOPkt          : 1;
  unsigned int isBroadcastADR : 1;
  unsigned int isBroadcastPAN : 1;

  unsigned char frameID;          /* AT        Status    */
  unsigned char atCmd[2];         /* AT                  */

  unsigned char status;           /* AT  Data  Status    */ /* status / options */
  unsigned char samples;
  unsigned char RSSI;             /*     Data            */

  unsigned char Addr16[2];        /* AT  Data            */

  unsigned char Addr64[8];        /* AT  Data            */

  unsigned char data[128];        /* AT  Data            */

  unsigned int datalen;
  xbee_types type;

  xbee_pkt *next;

  xbee_sample IOdata[1];  /* this array can be extended by using a this trick:
                             p = calloc(sizeof(xbee_pkt) + (sizeof(xbee_sample) * (samples - 1))) */
};
typedef struct xbee_con xbee_con;
struct xbee_con {
  unsigned int tAddr64       : 1;
  unsigned int atQueue       : 1; /* queues AT commands until AC is sent */
  unsigned int txDisableACK  : 1;
  unsigned int txBroadcastPAN: 1; /* broadcasts to PAN */
  unsigned int destroySelf   : 1; /* if set, the callback thread will destroy the connection
                                     after all of the packets have been processed */
  unsigned int waitforACK    : 1; /* waits for the ACK or NAK after transmission */
  unsigned int noFreeAfterCB : 1; /* prevents libxbee from free'ing the packet after the callback has completed */
  unsigned int __spare__     : 1;
  xbee_types type;
  unsigned char frameID;
  unsigned char tAddr[8];         /* 64-bit 0-7   16-bit 0-1 */
  void *customData;               /* can be used to store data related to this connection */
  void (CALLTYPE *callback)(xbee_con*,xbee_pkt*); /* call back function */
  void *callbackList;
  xbee_mutex_t callbackmutex;
  xbee_mutex_t callbackListmutex;
  xbee_mutex_t Txmutex;
  xbee_sem_t waitforACKsem;
  volatile unsigned char ACKstatus; /* 255 = waiting, 0 = success, 1 = no ack, 2 = cca fail, 3 = purged */
  xbee_con *next;
};
int CALLTYPE xbee_setup(char *path, int baudrate);
int CALLTYPE xbee_setupAPI(char *path, int baudrate, char cmdSeq, int cmdTime);
int CALLTYPE xbee_end(void);
void CALLTYPE xbee_logit(char *str);
void CALLTYPE xbee_endcon2(xbee_con **con, int alreadyUnlinked);
#define xbee_endcon(x) xbee_endcon2(&(x),0)
int CALLTYPE xbee_nsenddata(xbee_con *con, char *data, int length);
int CALLTYPEVA xbee_senddata(xbee_con *con, char *format, ...);
/* oh and just 'cos windows has rubbish memory management rules... this too */
void CALLTYPE xbee_free(void *ptr);
xbee_pkt * CALLTYPE xbee_getpacket(xbee_con *con);
int CALLTYPE xbee_hasdigital(xbee_pkt *pkt, int sample, int input);
int CALLTYPE xbee_getdigital(xbee_pkt *pkt, int sample, int input);
int CALLTYPE xbee_hasanalog(xbee_pkt *pkt, int sample, int input);
double CALLTYPE xbee_getanalog(xbee_pkt *pkt, int sample, int input, double Vref);
const char * CALLTYPE xbee_svn_version(void);